Correção do authenticate user id no onRequest
