# swagger.json
@@ -1711,6 +1711,14 @@
                       "description": {
                         "type": "string",
                         "nullable": true
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "format": "date-time"
+                      },
+                      "updatedAt": {
+                        "type": "string",
+                        "format": "date-time"
                       }
                     },
                     "required": [
